--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,1 +1,7 @@
-$primary-color: cadetblue;
+$primary-bg: green;
+$secondary-bg: orange;
+$out-focus: #444;
+$in-focus: #222;
+
+$primary-color: white;
+$out-focus-text: #ccc;
