--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,5 +1,3 @@
 // montserrat font
+// font-family: 'Montserrat', sans-serif;
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
-
-// Grenze Gotisch font
-@import url("https://fonts.googleapis.com/css2?family=Grenze+Gotisch&display=swap");
