--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,19 +1,118 @@
-@use "./fonts";
-@use "./colors";
+@use "./fonts" as *;
+@use "./colors" as *;
+
+html {
+  font-size: 16px;
+}
 
 body {
   padding: 0;
   margin: 0;
+  background-color: #333;
 }
 
-.test {
-  width: 100%;
-  height: 500px;
-  background: colors.$primary-color;
+.container {
+  // background-color: $primary-bg;
+  padding: 50px 0px;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #333;
-  font-size: 120px;
-  font-family: "Grenze Gotisch", cursive;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  .weather-card {
+    height: 600px;
+    border-radius: 5px;
+    background-color: $secondary-bg;
+    box-shadow: 0px 7px 40px 10px #222;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    .input-fields {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center;
+
+      input {
+        margin: 20px 20px;
+      }
+
+      #city::placeholder {
+        color: $out-focus-text;
+      }
+      #city {
+        padding: 10px 20px;
+        background-color: $out-focus;
+        color: $primary-color;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-family: "Montserrat", sans-serif;
+        border-radius: 15px;
+        outline: none;
+        border: none;
+      }
+      #city:focus,
+      #city:hover {
+        background-color: $in-focus;
+      }
+      #check-btn {
+        padding: 10px 40px;
+        border-radius: 10px;
+        border: none;
+        outline: none;
+        background-color: $out-focus;
+        color: $out-focus-text;
+      }
+      #check-btn:hover,
+      #check-btn:focus {
+        background-color: $in-focus;
+        color: $primary-color;
+      }
+      #check-btn:active {
+        background-color: $out-focus;
+        color: $primary-color;
+      }
+    }
+    .after-receive {
+      width: 100%;
+      .weather-data {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-evenly;
+        font-size: 25px;
+        font-family: "Montserrat", sans-serif;
+        color: #111;
+
+        div {
+          margin: 20px 20px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 575.8px) {
+  .container {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+
+    .weather-card {
+      width: 100%;
+      height: 100%;
+      background-color: orange;
+      border-radius: 0px;
+    }
+  }
 }
