add api fetching

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -84,15 +84,21 @@ body {
     }
     .after-receive {
       width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+
+      font-size: 25px;
+      font-family: "Montserrat", sans-serif;
+      color: #111;
+
       .weather-data {
         width: 100%;
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
         justify-content: space-evenly;
-        font-size: 25px;
-        font-family: "Montserrat", sans-serif;
-        color: #111;
 
         div {
           margin: 20px 20px;
